maze.shortestpath.ShortestPathMaze.scala.code
def ecritPos(x:Int,y:Int,a:Int):Boolean= {
while(getIndication(getX(),getY())==9999){
    
    if (!aMurNord(x,y) && getIndication(x,y-1)==9999){
        

    setIndication(x,y-1,a+1)
      ecritPos(x,y-1,a+1)
    
    }
    if (!aMurOuest(x,y)&& getIndication(x-1,y)==9999){
      setIndication(x-1,y,a+1)

    }
    
    if (y != getMondeHauteur()-1){
      if (!aMurNord(x,y+1)&& getIndication(x,y+1)==9999){
      setIndication(x,y+1,a+1)

      }
    }
      
    if (x != (getMondeHauteur()-1)){
      if (!aMurOuest(x+1,y)&& getIndication(x+1,y)==9999){
      setIndication(x+1,y,a+1)
      }
    }
  
  return true
  
}

                                                  


override def run() {
    // Your code here
  var x = getMondeLargeur() -1
  var y = getMondeHauteur() -1
  var xo = 0
  var yo = 0
  
  for (i<- 0 to x){
    for (j<-0 to y){
      if (aBiscuit(i,j)){
        xo = i
        yo = j
      }
    }
  }
	setIndication(xo,yo,0)
  ecritPos(xo,yo,0)
  
  
}